test/Sema/match-int-ranges.src
// V %srcc --sema --verify %s
program test;

int i;

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=int.max
match 1 {
    i: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 2..=int.max
match 1 {
    i: 2;
    1: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 3..=int.max
match 1 {
    i: 2;
    1: 2;
    2: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 5..=int.max
match 1 {
    i: 2;
    1: 2;
    4: 2;
    3: 2;
    2: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 3, 5..=int.max
match 1 {
    i: 2;
    1: 2;
    4: 2;
    2: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 3, 5..=19, 21..=int.max
match 1 {
    i: 2;
    1: 2;
    4: 2;
    2: 2;
    20: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775807..=int.max
match 1 {
    int.min: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775806..=int.max
match 1 {
    int.min: 1;
    int.min + 1: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775807, -9223372036854775805..=int.max
match 1 {
    int.min: 1;
    int.min + 2: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=9223372036854775806
match 1 {
    int.max: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=9223372036854775805
match 1 {
    int.max: 1;
    int.max - 1: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=9223372036854775804, 9223372036854775806
match 1 {
    int.max: 1;
    int.max - 2: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775807..=9223372036854775806
match 1 {
    int.min: 1;
    int.max: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775807..=-1, 1..=9223372036854775806
match 1 {
    int.min: 1;
    0: 1;
    int.max: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775805..=-1, 3..=9223372036854775804
match 1 {
    int.min: 1;
    int.max: 2;
    0: 1;
    int.min + 1: 1;
    int.max - 1: 2;
    2: 1;
    int.min + 2 : 1;
    1: 1;
    int.max - 2: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min, -9223372036854775806..=9223372036854775805, int.max
match 1 {
    int.min + 1: 1;
    int.max - 1: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 6..=9, 15..=int.max
match 1 {
    1: 1;
    10: 1;
    2: 1;
    11: 1;
    4: 1;
    13: 1;
    5: 1;
    14: 1;
    3: 1;
    12: 1;
}

var x = match 1 {
    int.min..<int.max: 1;
    int.max: 2;
};

var x = match 1 {
    1: 2;
    3: 4;
    _: 5;
};

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.max
match 1 {
    int.min..<int.max: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min
match 1 {
    int.min+1..<int.max: 1;
    int.max: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 11..=int.max
match 1 {
    1..=10: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 10..=int.max
match 1 {
    1..<10: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 21..=int.max
match 1 {
    1..=10: 1;
    11..=20: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 21..=int.max
match 1 {
    1..=10: 1;
    10..=20: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 21..=int.max
match 1 {
    1..=15: 1;
    10..=20: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 28..=int.max
match 1 {
    1..=2: 1;
    25..=27: 1;
    4..=6: 1;
    20..=22: 1;
    2..=4: 1;
    23..=24: 1;
    7..=19: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 28..=int.max
match 1 {
    1..=2: 1;
    25..=27: 1;
    4..=6: 1;
    20..=22: 1;
    2..=4: 1;
    23..=24: 1;
    2..=25: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=4, 26..=int.max
match 1 {
    10..=20: 1;
    5..=25: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=4, 26..=int.max
match 1 {
    5..=25: 1; // expected-note:  Because it is subsumed by this preceding pattern
    10..=20: 1; // expected-warning: Pattern will never be matched
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=4, 26..=int.max
match 1 {
    5..=15: 1; // expected-note:  Because it is partially subsumed by this preceding pattern
    16..=25: 1; // expected-note:  Because it is partially subsumed by this preceding pattern
    10..=20: 1; // expected-warning: Pattern will never be matched
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 11..=int.max
match 1 {
    1..=10: 1; // expected-note 2: Because it is subsumed by this preceding pattern
    1..=10: 1; // expected-warning: Pattern will never be matched
    1..<11: 1; // expected-warning: Pattern will never be matched
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=-1, 12..=int.max
match 1 {
    1..=10: 1;
    0..=10: 1;
    1..=11: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=-6, 0, 11, 21, 31..=int.max
match 1 {
    1..=10: 1;
    12..=20: 1;
    -5..=-1: 1;
    22..=30: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=-6, 31..=int.max
match 1 {
    1..=10: 1;
    12..=20: 1;
    -5..=-1: 1;
    22..=30: 1;
    0: 1;
    11: 1;
    21: 21;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=-6, 31..=int.max
match 1 {
    1..=10: 1;
    12..=20: 1;
    -5..=-1: 1;
    22..=30: 1;
    0..=21: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 23..=int.max
match 1 {
    1..=4: 1;
    6..=8: 1;
    12..=16: 1;
    20..=22: 1;
    4..=20: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 23..=int.max
match 1 {
    1..=4: 1;
    6..=8: 1;
    12..=16: 1;
    20..=22: 1;
    5..=19: 1;
}
